# gmenu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: api_sketch.md  editor_plan.md  gubsy_gap_list.md  spec.md
examples/: gmenu_demo.cpp
examples/sdl_demo/: imgui_debug.cpp  imgui_debug.hpp  main.cpp
include/gmenu/: gmenu.hpp  imgui.hpp  input.hpp  input_screens.hpp  menu.hpp  rows.hpp  screens.hpp  types.hpp  widgets.hpp
scripts/: build_imgui_demo.sh  run.sh  run_sdl_demo.sh  run_sdl_demo_imgui.sh
src/: imgui.cpp  input.cpp  input_screens.cpp  menu.cpp  menu_actions.cpp  menu_feedback.cpp  menu_interaction.cpp  menu_lookup.cpp  menu_nav_runtime.cpp  nav.cpp  nav_io.cpp  rows.cpp  screens.cpp  types.cpp  view.cpp  widgets.cpp
tests/: gmenu_tests.cpp  screen_tests.cpp  test_common.hpp
